Thu Jun 12 09:23:26 UTC 2008  Ossama Othman  <othmano@ociweb.com>

        * tests/DCPS/TransientDurability/DataReaderListener.cpp:
        * tests/DCPS/TransientDurability/DataReaderListener.h:
        * tests/DCPS/TransientDurability/DataWriterListenerImpl.cpp:
        * tests/DCPS/TransientDurability/DataWriterListenerImpl.h:
        * tests/DCPS/TransientDurability/domain_ids:
        * tests/DCPS/TransientDurability/Messenger.idl:
        * tests/DCPS/TransientDurability/pub.ini:
        * tests/DCPS/TransientDurability/publisher.cpp:
        * tests/DCPS/TransientDurability/README:
        * tests/DCPS/TransientDurability/run_test.pl:
        * tests/DCPS/TransientDurability/sub.ini:
        * tests/DCPS/TransientDurability/subscriber.cpp:
        * tests/DCPS/TransientDurability/tcp.conf:
        * tests/DCPS/TransientDurability/TransientDurability.mpc:
        * tests/DCPS/TransientDurability/Writer.cpp:
        * tests/DCPS/TransientDurability/Writer.h:

          New TRANSIENT DURABILITY test.

Thu Jun 12 05:49:36 UTC 2008  Trevor Fields  <fields_t@ociweb.com>

        * tests/DCPS/Deadline/DataReaderListener.cpp:
        * tests/DCPS/Deadline/publisher.cpp:
        * tests/DCPS/Deadline/run_test.pl:
        * tests/DCPS/Deadline/subscriber.cpp:
        * tests/DCPS/Deadline/Writer.cpp:

          Correct synchronization issue between publisher and subscriber.

Thu Jun 12 04:38:01 UTC 2008  Ossama Othman  <othmano@ociweb.com>

        * tests/DCPS/Deadline/DataWriterListenerImpl.cpp
          (on_offered_deadline_missed):

          Fixed unused parameter warning.

Wed Jun 11 18:10:41 UTC 2008  Jonathan Pollack  <pollack_j@ociweb.com>

        * tests/DCPS/Lifespan/Lifespan.mpc:

          Added MPC file for this test.

Wed Jun 11 05:58:20 UTC 2008  Ossama Othman  <othmano@ociweb.com>

        * tests/DCPS/Lifespan/DataWriterListenerImpl.cpp:

          Fixed unused parameter warning.

Tue Jun 10 12:23:45 UTC 2008  Ossama Othman  <othmano@ociweb.com>
