@@ -1,3 +1,10 @@
+Thu Jun 12 15:53:44 UTC 2008  Adam Mitz  <mitza@ociweb.com>
+
+        * dds/DCPS/DataDurabilityCache.cpp:
+        * dds/DCPS/ZeroCopySeq_T.cpp:
+
+          Attempting once again to fix Borland compile errors.
+
 Thu Jun 12 09:23:26 UTC 2008  Ossama Othman  <othmano@ociweb.com>
 
         * tests/DCPS/TransientDurability/DataReaderListener.cpp:
